# AdventOfCode2022

./: .gitignore  1  README.md  aoc.cabal  flake.nix  tmp
src/: Main.hs  P1.hs  P10.hs  P11.hs  P12.hs  P13.hs  P14.hs  P15.hs  P2.hs  P3.hs  P4.hs  P5.hs  P6.hs  P7.hs  P8.hs  P9.hs  Problem.hs  Util.hs
